switched service worker to workbox

--- a/client/ultisite.html
+++ b/client/ultisite.html
@@ -13,33 +13,33 @@
 	<meta content="telephone=no" name="format-detection">
 
 	<!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. -->
-	<link rel="apple-touch-icon-precomposed" href="/dynamicAppIcon?size=180">
+	<link rel="apple-touch-icon-precomposed" href="/dynamicAppIcon.png?size=180">
 
 	<!-- Firefox, Chrome, Safari, IE 11+ and Opera. 196x196 pixels in size. -->
-	<link href="/dynamicAppIcon?size=196" rel="shortcut icon" sizes="196x196">
+	<link href="/dynamicAppIcon.png?size=196" rel="shortcut icon" sizes="196x196">
 	<!-- non-retina iPhone vor iOS 7 -->
-	<link rel="apple-touch-icon" href="/dynamicAppIcon?size=57" sizes="57x57">
+	<link rel="apple-touch-icon" href="/dynamicAppIcon.png?size=57" sizes="57x57">
 	<!-- non-retina iPad vor iOS 7 -->
-	<link rel="apple-touch-icon" href="/dynamicAppIcon?size=72" sizes="72x72">
+	<link rel="apple-touch-icon" href="/dynamicAppIcon.png?size=72" sizes="72x72">
 	<!-- non-retina iPad iOS 7 -->
-	<link rel="apple-touch-icon" href="/dynamicAppIcon?size=76" sizes="76x76">
+	<link rel="apple-touch-icon" href="/dynamicAppIcon.png?size=76" sizes="76x76">
 	<!-- retina iPhone vor iOS 7 -->
-	<link rel="apple-touch-icon" href="/dynamicAppIcon?size=114" sizes="114x114">
+	<link rel="apple-touch-icon" href="/dynamicAppIcon.png?size=114" sizes="114x114">
 	<!-- retina iPhone iOS 7 -->
-	<link rel="apple-touch-icon" href="/dynamicAppIcon?size=120" sizes="120x120">
+	<link rel="apple-touch-icon" href="/dynamicAppIcon.png?size=120" sizes="120x120">
 	<!-- retina iPad vor iOS 7 -->
-	<link rel="apple-touch-icon" href="/dynamicAppIcon?size=144" sizes="144x144">
+	<link rel="apple-touch-icon" href="/dynamicAppIcon.png?size=144" sizes="144x144">
 	<!-- retina iPad iOS 7 -->
-	<link rel="apple-touch-icon" href="/dynamicAppIcon?size=152" sizes="152x152">
+	<link rel="apple-touch-icon" href="/dynamicAppIcon.png?size=152" sizes="152x152">
 	<!-- retina iPad iOS 7 für iPhone 6 Plus -->
-	<link rel="apple-touch-icon" href="/dynamicAppIcon?size=180" sizes="180x180">
+	<link rel="apple-touch-icon" href="/dynamicAppIcon.png?size=180" sizes="180x180">
 
 	<meta name="msapplication-TileColor" content="#1c5f3c" />
-	<meta name="msapplication-TileImage" content="dynamicAppIcon?size=150" />
+	<meta name="msapplication-TileImage" content="dynamicAppIcon.png?size=150" />
 	<meta name="msapplication-tooltip" content="Turnierplaner" />
-	<meta name="msapplication-square70x70logo" content="dynamicAppIcon?size=70" />
-	<meta name="msapplication-square150x150logo" content="dynamicAppIcon?size=150" />
-	<meta name="msapplication-square310x310logo" content="dynamicAppIcon?size=310" />
+	<meta name="msapplication-square70x70logo" content="dynamicAppIcon.png?size=70" />
+	<meta name="msapplication-square150x150logo" content="dynamicAppIcon.png?size=150" />
+	<meta name="msapplication-square310x310logo" content="dynamicAppIcon.png?size=310" />
 	<meta name="msapplication-notification" 
      content="frequency=30;polling-uri=http://localhost:3000/msxmltiles?content=events;polling-uri2=http://localhost:3000/msxmltiles?content=images">
 	<meta content="UltiSite App" name="application-name">
