--- a/packages/hatinfo/private/confirm.html
+++ b/packages/hatinfo/private/confirm.html
@@ -13,7 +13,7 @@
     und deinen Status einsehen, also hebe ihn bitte gut auf.
   </p>
   <p>
-    {{additionalInfos}}
+    {{{additionalInfos}}}
   </p>
   <p>
     Viele Grüße<br />
