allow deleting practices

--- a/imports/client/practices/practiceView.html
+++ b/imports/client/practices/practiceView.html
@@ -21,6 +21,9 @@
                 <button class="btn btn-light pull-right action-edit">
                     <span class="fa fa-edit"></span>
                 </button>
+                <button class="btn btn-danger pull-right action-delete">
+                    <span class="fa fa-trash"></span>
+                </button>
             {{/if}}
             <h5>
                 {{#unless hideHostingTeam}}
