make email for hat configurable

--- a/packages/hatinfo/client/hat.html
+++ b/packages/hatinfo/client/hat.html
@@ -256,6 +256,9 @@
     <div class="col-sm-2">
         <input name="hatName" class="form-control" value="{{settings.hatName}}" placeholder="Turniername" title="Turniername">
     </div>
+    <div class="col-sm-2">
+        <input name="hatEmail" class="form-control" value="{{settings.hatEmail}}" placeholder="E-Mail" title="E-Mail">
+    </div>
     <div class="dropdown col-sm-3 wiki-association">
         <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
             Sortierung: {{settings.hatSort}}
