showing play year options

--- a/packages/hatinfo/client/hat.html
+++ b/packages/hatinfo/client/hat.html
@@ -188,7 +188,7 @@
                 <div class="progress text-center" title="Erfahrung">
                     <div class="progress-bar bg-info" role="progressbar" style="width:{{experiencePercent}}%">Erfahrung {{experience}}</div>
                 </div>
-                <div>{{years}} Spieljahre</div>
+                <div>Spielt {{getYears}}</div>
             </div>
             {{#if activeEntry}}
                 <div class="col-12 col-sm-6">
